# Real-Time-Chat

./: .coverage  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  spec.md
alembic/: env.py
docker/: .dockerignore  Dockerfile  docker-compose.test.yml  docker-compose.yml
docs/: README.md  code-standards.md  codebase-summary.md  project-overview-pdr.md  system-architecture.md
src/: main.py
src/adapters/api/: bcrypt_password_service.py  dependencies.py  jwt_token_service.py  jwt_utils.py  password_utils.py
src/adapters/celery_tasks/: cleanup_tasks.py  file_processing_tasks.py  notification_tasks.py
src/adapters/persistence/: database.py
src/adapters/redis/: presence_store.py  read_receipt_store.py  token_blacklist.py
src/adapters/storage/: local_file_storage.py
src/adapters/websocket/: socket_server.py
src/domain/: exceptions.py
src/domain/entities/: __init__.py  channel.py  direct_conversation.py  file_attachment.py  membership.py  mention.py  message.py  notification.py  reaction.py  thread.py  user.py
src/domain/repositories/: channel_repository.py  dm_repository.py  file_repository.py  membership_repository.py  mention_repository.py  (+7 more)
src/infrastructure/: celery_app.py  config.py  container.py  logging_config.py
src/realtime_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/fakes/: fake_channel_repository.py  fake_dm_repository.py  fake_membership_repository.py  fake_mention_repository.py  fake_message_repository.py  fake_notification_repository.py  fake_reaction_repository.py  fake_thread_repository.py  fake_token_blacklist.py  fake_user_repository.py
(+145 files in other folders)
